// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LoadingIndicator /> > CustomAriaLabel story renders snapshot 1`] = `
<div
  aria-label="Loading"
  class="css-1gj5auq-StyledLoadingIndicator-style-minimal-StyledLoadingIndicator egvgfho0"
>
  <div
    class="css-1d5hom7-StyledIcon emi0zh40"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-m7rge5-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
      data-file-name="IconLoadingLarge"
      data-testid="IconLoadingLarge"
      fillcontrast="white"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
  <span
    aria-label="Loading cats list..."
    aria-live="polite"
    class="css-3l1hkm-StyledText egvgfho1"
    role="status"
  >
    Loading
  </span>
</div>
`;

exports[`<LoadingIndicator /> > Default story renders snapshot 1`] = `
<div
  aria-label="Loading"
  class="css-1gj5auq-StyledLoadingIndicator-style-minimal-StyledLoadingIndicator egvgfho0"
>
  <div
    class="css-1d5hom7-StyledIcon emi0zh40"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-m7rge5-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
      data-file-name="IconLoadingLarge"
      data-testid="IconLoadingLarge"
      fillcontrast="white"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
  <span
    aria-live="polite"
    class="css-3l1hkm-StyledText egvgfho1"
    role="status"
  >
    Loading
  </span>
</div>
`;
